# data-talker

./: .env.template  .flake8  .gitignore  LICENSE  README.md  example.csv  pyproject.toml  sales.csv  setup.sh
.github/: issue_template.md  pull_request_template.md
.github/workflows/: publish_to_pypi.yaml
data_talker/: df_tool.py  service.py  voice.py
